--- a/_catalog/30/ust-7011.md
+++ b/_catalog/30/ust-7011.md
@@ -4,6 +4,7 @@ title: UST 7013
 date: January 9, 2017
 image: https://f4.bcbits.com/img/a1566556388_10.jpg
 volume: SME 30
+price: 28.9
 ---
 
 Another legendary jam on Fonit Library series 'Hi-Fi International' composed by maestro Stelvio Cipriani. Probably written for some obscure movie, this infamous session from 1976 recently discovered immediately became a grail for DJs and collectors. Outstanding Score vibes, several Western and Romantic movie themes in the vein of Ennio Morricone are alternated by some insane beats and spacey Avant-garde. The mindmelting groove of "NOTTE DELLE STREGHE" is an incredible Experimental arrangement of 'In A Gadda Vida' notes with a killer esoteric style and true top notch stuff for any samples hunter. Fantastic ITALIAN LIBRARY LP, impossible to find on its original edition!
