--- a/_catalog/29/ust-7011.md
+++ b/_catalog/29/ust-7011.md
@@ -9,4 +9,4 @@ buy: https://sonormusiceditions.bandcamp.com/album/ust-7013
 
 Originally released on Fonit Cetra Hi-Fi International series in 1973, this MEGA-RARE Italian Library still unknown in the record collectors circle features some of the most insane grooves made in Italy. Outstanding, spaced-out Breakbeats with the best uptempo, Hip Hop beats and B-boy Funk tunes you could ever desire, alternated by Easy Listening scores and happy Synthesizer themes. This killer prolific duo (Brugnolini-Carnini) have pulled out in the early 70s some of the most insane tunes released on the infamous Fonit Library series, composing tons of Library music with the auxiliary of few session men, vintage analogue Synthesizers and Hammond organ. Absolutely incredible and unexpected stunning music written for Italian Rai TV. A mythical Italian Library LP simply to die for!
 
-<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=3868820571/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://sonormusiceditions.bandcamp.com/album/ust-7011-popfolkmusic">UST 7011 - POPFOLKMUSIC by Narassa, Zanagoria</a></iframe>
+<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/180519178&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/armagideon-times" title="Armagideon Times" target="_blank" style="color: #cccccc; text-decoration: none;">Armagideon Times</a> · <a href="https://soundcloud.com/armagideon-times/stelvio-cipriani-ust-7013-fonit-library-1976" title="Stelvio Cipriani - UST 7013 - 1976 Fonit ITALIAN LIBRARY Grail" target="_blank" style="color: #cccccc; text-decoration: none;">Stelvio Cipriani - UST 7013 - 1976 Fonit ITALIAN LIBRARY Grail</a></div>
