--- a/_catalog/30/ust-7011.md
+++ b/_catalog/30/ust-7011.md
@@ -4,9 +4,9 @@ title: UST 7013
 date: January 9, 2017
 image: https://f4.bcbits.com/img/a1566556388_10.jpg
 volume: SME 30
-price: 28.9
+buy: https://sonormusiceditions.bandcamp.com/album/ust-7013
 ---
 
-Another legendary jam on Fonit Library series 'Hi-Fi International' composed by maestro Stelvio Cipriani. Probably written for some obscure movie, this infamous session from 1976 recently discovered immediately became a grail for DJs and collectors. Outstanding Score vibes, several Western and Romantic movie themes in the vein of Ennio Morricone are alternated by some insane beats and spacey Avant-garde. The mindmelting groove of "NOTTE DELLE STREGHE" is an incredible Experimental arrangement of 'In A Gadda Vida' notes with a killer esoteric style and true top notch stuff for any samples hunter. Fantastic ITALIAN LIBRARY LP, impossible to find on its original edition!
+Another legendary jam on Fonit Library series 'Hi-Fi International' composed by maestro Stelvio Cipriani. Probably written for some obscure movie, this infamous session from 1976 has been recently discovered and immediately became a grail for DJs and collectors. Outstanding score vibes, with several Western and Romantic movie themes in the vein of Ennio Morricone are alternated by some insane beats and spacey Avant-garde. The mind-blowing groove of "NOTTE DELLE STREGHE" is an incredible Experimental arrangement of 'In A Gadda Vida' played with in a killer esoteric style. Fantastic ITALIAN LIBRARY LP, impossible to find on its original ed. and dreamy stuff for any Library addicted / samples hunter.
 
-<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=3096850551/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://sonormusiceditions.bandcamp.com/album/ust-7013">UST 7013 by Stelvio Cipriani</a></iframe>
+<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/180519178&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/armagideon-times" title="Armagideon Times" target="_blank" style="color: #cccccc; text-decoration: none;">Armagideon Times</a> · <a href="https://soundcloud.com/armagideon-times/stelvio-cipriani-ust-7013-fonit-library-1976" title="Stelvio Cipriani - UST 7013" target="_blank" style="color: #cccccc; text-decoration: none;">Stelvio Cipriani - UST 7013</a></div>
